--- a/QuickAngular5/newng5/src/app/about/about.component.html
+++ b/QuickAngular5/newng5/src/app/about/about.component.html
@@ -2,3 +2,7 @@
   This is page for about. we can say that "about works!".
   <a href="" (onclick) = "sendMeHome()" ><strong><u>Take me back.</u></strong></a>
 </p>
+
+<ul>
+  <li *ngFor="let goal of goals"> {{ goal }}</li>
+</ul>
